--- a/styling/styles.css
+++ b/styling/styles.css
@@ -88,12 +88,12 @@ nav ul li a:hover {
 }
 
 .bajs {
-    margin-top: 10rem;
+    margin-top: 8rem;
 }
 
 .section {
     padding: 3rem 2rem;
-    text-align: bottom;
+    text-align: center;
 }
 
 .section-list {
@@ -194,5 +194,59 @@ p {
   border-radius: 10px;
 }
 
+.hero {
+  background-image: url('../images/hello.png');
+  height: 100vh;
+  padding-top: 15rem; 
+  padding-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start; 
+  align-items: center;
+  text-align: center;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+}
+
+.hero::after {
+  content: "";
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 0;
+}
+
+.hero h1{
+    font-size: 4rem;
+    margin-top: 1rem;
+    color: #c76272;
+}
+.hero p {
+  font-size: 1.5rem; 
+  margin-bottom: 1.5rem;
+}
+.hero .btn {
+  position: relative;
+  z-index: 1;
+}
+
+.hero .btn {
+  background-color: #d58f99;
+  border: none;
+  color: #fff;
+  padding: 0.75rem 1.5rem;
+  font-size: 1.1rem;
+  border-radius: 5px;
+  margin-top: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.hero .btn:hover {
+  background-color: #a68076;
+}
 
 
