--- a/styling/styles.css
+++ b/styling/styles.css
@@ -208,18 +208,18 @@ p {
 
 .hero {
   background-image: url('../images/hello.png');
-  height: 100vh;
-  padding-top: 15rem; 
+  padding-top: 15rem;
   padding-bottom: 2rem;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start; 
+  justify-content: flex-start;
   align-items: center;
   text-align: center;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   position: relative;
+  min-height: 100vh; 
 }
 
 .hero::after {
@@ -241,6 +241,7 @@ p {
   margin-bottom: 1.5rem;
 }
 .hero .btn {
+  margin-bottom: 10rem;
   position: relative;
   z-index: 1;
 }
@@ -259,6 +260,13 @@ p {
 
 .hero .btn:hover {
   background-color: #a68076;
+}
+
+.hero .style-google{
+  pointer-events: auto;
+  z-index: 1;
+  position: relative;
+  margin-bottom: 10rem;
 }
 
 
